--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
     "lucide-react": "^0.485.0",
